added username avilibility check api
